plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

mainClassName = 'nro.server.GameServer'

group = 'nro.server'
version = '1.0.0'

repositories {
    mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}


dependencies {

    implementation project(':commons')

    implementation 'net.onedaybeard.artemis:artemis-odb:2.3.0'

    implementation 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.2'

    implementation("org.reflections:reflections:0.10.2")
    implementation("com.googlecode.json-simple:json-simple:1.1.1")
    implementation("org.json:json:20250107")
    implementation("com.zaxxer:HikariCP:6.3.0")
    implementation 'ch.qos.logback:logback-classic:1.5.16'
    implementation("org.quartz-scheduler:quartz:2.5.0")
//    implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
//    implementation 'org.apache.logging.log4j:log4j-api:2.20.0'
    implementation("com.lmax:disruptor:4.0.0")
    implementation("com.mysql:mysql-connector-j:9.2.0")
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
}


test {
    useJUnitPlatform()
}